Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17065

listView: ContentX and Content Y not being reset correctly when orientation changed

XMLWordPrintable

    • ddae2b67a8eab5e6b298ce516234f4bf7c0367c1

      If the listView is scrolled in one direction (e.g. vertically while orientation is Vertical), then the orientation is changed, the change in contentY remains and is not reset to zero.
      The result is the listView often completely "disappears".

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            chham Christopher Ham (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes