Ensure view is positioned correctly when orientation changes.

Change-Id: I7fbedff965ae8c89dcbb96ba5dcee85c07aa29b1
Task-number: QTBUG-17065
Reviewed-by: Bea Lam