tests/auto/declarative/qdeclarativelistview/tst_qdeclarativelistview.cpp
@@ -119,6 +119,7 @@ private slots:
     void testQtQuick11Attributes_data();
     void rightToLeft();
     void test_mirroring();
+    void orientationChange();
 
 private:
     template <class T> void items();
@@ -2581,6 +2582,52 @@ void tst_QDeclarativeListView::test_mirroring()
 
     delete canvasA;
     delete canvasB;
+}
+
+void tst_QDeclarativeListView::orientationChange()
+{
+    QDeclarativeView *canvas = createView();
+
+    canvas->setSource(QUrl::fromLocalFile(SRCDIR "/data/orientchange.qml"));
+    qApp->processEvents();
+
+    QDeclarativeListView *listview = qobject_cast<QDeclarativeListView*>(canvas->rootObject());
+    QVERIFY(listview != 0);
+
+    QDeclarativeItem *contentItem = listview->contentItem();
+    QVERIFY(contentItem != 0);
+
+    listview->positionViewAtIndex(50, QDeclarativeListView::Beginning);
+
+    // Confirm items positioned correctly
+    for (int i = 50; i < 54; ++i) {
+        QDeclarativeItem *item = findItem<QDeclarativeItem>(contentItem, "wrapper", i);
+        QVERIFY(item);
+        QCOMPARE(item->y(), i*80.0);
+    }
+
+    listview->setOrientation(QDeclarativeListView::Horizontal);
+    QCOMPARE(listview->contentY(), 0.);
+
+    // Confirm items positioned correctly
+    for (int i = 0; i < 3; ++i) {
+        QDeclarativeItem *item = findItem<QDeclarativeItem>(contentItem, "wrapper", i);
+        QVERIFY(item);
+        QCOMPARE(item->x(), i*80.0);
+    }
+
+    listview->positionViewAtIndex(50, QDeclarativeListView::Beginning);
+    listview->setOrientation(QDeclarativeListView::Vertical);
+    QCOMPARE(listview->contentX(), 0.);
+    //
+    // Confirm items positioned correctly
+    for (int i = 0; i < 4; ++i) {
+        QDeclarativeItem *item = findItem<QDeclarativeItem>(contentItem, "wrapper", i);
+        QVERIFY(item);
+        QCOMPARE(item->y(), i*80.0);
+    }
+
+    delete canvas;
 }
 
 void tst_QDeclarativeListView::qListModelInterface_items()
